done fixing spacing issues with cards, still may change border/colors

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,700");
 * {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
@@ -13,7 +12,7 @@
 body {
   margin: 0px;
   padding: 0px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Russo One', sans-serif;
   background-color: #66A612;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -42,8 +41,8 @@ header {
   max-height: 275px; }
 
 .pokemon-cards {
-  margin: 1px;
-  width: 16%;
+  width: 15%;
+  margin: 1%;
   height: 0%;
   max-width: 250px;
   -moz-border-radius: 5px;
@@ -51,8 +50,8 @@ header {
   border-radius: 5px;
   border: 1px solid;
   padding: 10px;
-  box-shadow: 6px 13px yellow;
-  background-color: white;
+  box-shadow: 6px 13px #444141;
+  background-color: lightgrey;
   border: 1px solid #ee1515; }
   .pokemon-cards:hover {
     opacity: 1; }
@@ -67,7 +66,7 @@ footer {
   padding: 1%;
   margin: 0px;
   text-align: center;
-  background-color: #66A612; }
+  background-color: #ee1515; }
   footer a {
     text-decoration: none; }
 
